# lpc1342-pac-blinky-rs

./: Cargo.toml  README.md  justfile  memory.x
.cargo/: config.toml
src/: main.rs
